--- a/node-app/package.json
+++ b/node-app/package.json
@@ -5,5 +5,16 @@
   "main": "index.js",
   "repository": "git@github.com:HBM08/playground.git",
   "author": "bho",
-  "license": "MIT"
+  "license": "ISC",
+  "scripts": {
+    "start": "nodemon app.js"
+  },
+  "keywords": [],
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
+  }
 }
