--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,11 @@ services:
         ports: 
           - 80:80
           - 443:443
+    database:
+      image: "postgres"
+      env_file:
+        - ./node-app/database.env
+      volumes:
+        - database-data:/var/lib/postgresql/data/
+volumes:
+  database-data:
