--- a/node-app/package.json
+++ b/node-app/package.json
@@ -12,7 +12,10 @@
   "keywords": [],
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
