--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
         volumes:
             - /app/node_modules 
             - ./node-app:/app
+        ports:
+          - 5000:5000
     nginx:
         container_name: "nginx"
         restart: always
