--- a/node-app/package.json
+++ b/node-app/package.json
@@ -11,9 +11,11 @@
   },
   "keywords": [],
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "object-schema-validation": "^1.1.1",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
